--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mongoose"]
-    path = support/mongoose
-    url  = git://github.com/LearnBoost/mongoose.git
+[submodule "support/mongoose"]
+	path = support/mongoose
+	url = git://github.com/LearnBoost/mongoose.git
